[model] some small route refactoring